# vessel

./: .botbox.json  .botbox.toml  .critignore  .edict.toml  .gitignore  .maw.toml  .sealignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md
.agents/botbox/: .version  coordination.md  cross-channel.md  finish.md  groom.md  last-iteration.txt  merge-check.md  mission.md  planning.md  preflight.md  proposal.md  report-issue.md  review-loop.md  review-request.md  review-response.md  scout.md  start.md  triage.md  update.md  worker-loop.md
.agents/botbox/design/: .design-docs-version  cli-conventions.md
.agents/botbox/hooks/: .hooks-version  check-bus-inbox.sh  check-jj.sh  claim-agent.sh  init-agent.sh
.agents/botbox/prompts/: .prompts-version  reviewer-security.md  reviewer.md
.agents/botbox/scripts/: .scripts-version  agent-loop.mjs  agent-loop.sh  dev-loop.mjs  dev-loop.sh  iteration-start.mjs  respond.mjs  reviewer-loop.mjs  reviewer-loop.sh  spawn-security-reviewer.sh  triage.mjs
.agents/edict/: .version  coordination.md  cross-channel.md  finish.md  groom.md  last-iteration.txt  merge-check.md  mission.md  planning.md  preflight.md  proposal.md  review-loop.md  review-request.md  review-response.md  start.md  triage.md  update.md  worker-loop.md
.agents/edict/design/: .design-docs-version  cli-conventions.md
.agents/edict/prompts/: .prompts-version  reviewer-security.md  reviewer.md
.beads/: issues.jsonl
.claude/: settings.json
.crit/: events.jsonl.v1.backup
.crit/reviews/cr-3h81/: events.jsonl
.crit/reviews/cr-41e6/: events.jsonl
.crit/reviews/cr-5e1v/: events.jsonl
.crit/reviews/cr-hdox/: events.jsonl
.crit/reviews/cr-klwd/: events.jsonl
.crit/reviews/cr-qmr8/: events.jsonl
.github/workflows/: release.yml
.pi/extensions/: botbox-hooks.ts
.seal/: .gitignore
.seal/reviews/cr-1h7y/: events.jsonl
.seal/reviews/cr-5e1v/: events.jsonl
.seal/reviews/cr-hdox/: events.jsonl
.seal/reviews/cr-qmr8/: events.jsonl
docs/: testing.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_protocol.rs  fuzz_request_handling.rs
scripts/: orchestration-test.sh
src/: attach.rs  cli.rs  client.rs  lib.rs  main.rs  output.rs  protocol.rs  pty.rs  runtime.rs  sys.rs  telemetry.rs  testing.rs  view.rs
src/server/: agent.rs  manager.rs  mod.rs  transcript.rs
tests/: cli.rs  integration.rs  orchestration.rs
