[package]
name = "vessel-pty"
version = "0.17.3"
edition = "2024"
license = "MIT"
description = "PTY-based runtime for orchestrating interactive terminal processes over Unix sockets"
repository = "https://github.com/bobisme/vessel"

[[bin]]
name = "vessel"
path = "src/main.rs"

[lib]
name = "vessel"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive", "env"] }
dirs = "6.0.0"
hex = "0.4.3"
libc = "0.2.180"
names = { version = "0.14.0", default-features = false }
nix = { version = "0.31.1", features = ["term", "signal", "process", "fs"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
similar = { version = "2.6.0", features = ["text"] }
strip-ansi-escapes = "0.2.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"], optional = true }
asupersync = { version = "0.2.9", default-features = false, features = [
  "test-internals",
  "proc-macros",
], optional = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
vt100 = "0.16.2"

# Optional: OTLP export (sync HTTP via reqwest-blocking)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", optional = true, features = [
  "trace",
  "logs",
] }
opentelemetry-otlp = { version = "0.31", optional = true, default-features = false, features = [
  "trace",
  "logs",
  "http-proto",
  "reqwest-blocking-client",
] }
opentelemetry-appender-tracing = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[features]
default = ["otel", "runtime-asupersync"]
runtime-tokio = ["dep:tokio"]
runtime-asupersync = ["dep:asupersync"]
otel = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry-appender-tracing",
  "dep:tracing-opentelemetry",
]

[lints.rust]
# Unsafe is confined to src/pty.rs and src/sys.rs which #![allow(unsafe_code)]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
# maybe
suspicious = { level = "warn", priority = -2 }
complexity = { level = "warn", priority = -2 }
perf = { level = "warn", priority = -2 }
style = { level = "warn", priority = -2 }

[dev-dependencies]
assert_cmd = "2.1.2"
futures = "0.3.31"
predicates = "3.1.3"
